# livekit-chat-snack

./: .gitignore  README.md  docker-compose.yml  livekit.yml
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/pages/: index.tsx
frontend/src/pages/api/: token.ts
rust/: Cargo.toml
rust/src/: main.rs
